syntax = "proto3";

option csharp_namespace = "Genova.SecurityService.Protos";

service Auth {
    // Health check method
    rpc Ping (PingRequest) returns (PingResponse);

    // Authenticate user with username/password → Returns a JWT
    rpc Authenticate (AuthRequest) returns (AuthResponse);

    // Validate an existing JWT and return user details
    rpc ValidateToken (TokenRequest) returns (TokenResponse);
}

message PingRequest {}

message PingResponse {
    string message = 1;
}

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
}

message TokenRequest {
    string token = 1; // Client sends the JWT token to verify
}

message TokenResponse {
    bool isValid = 1; // Whether the token is valid
    string username = 2; // User's username (if valid)
    repeated string roles = 3; // User roles/permissions (if applicable)
    string errorMessage = 4; // Error message if invalid
}
